Creates test cases

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,10 @@
         <h3 id="data-type"></h3>
     </div>
 
+    <div class="csv-filter">
+        <!-- Button for CSV filter -->
+    </div>
+
     <div id="data-button">
         <button id="getAllDataButton">All Data</button>
         <button id="getJsonDataButton">JSON file</button>
